# building_load

./: README.md  main.ipynb  main.py  pyproject.toml
data/: data_v1.0.xlsx  data_v2.0.xlsx
