[project]
name = "building-load"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adagio==0.2.6",
    "altair==5.5.0",
    "altair-tiles==0.4.0",
    "annotated-types==0.7.0",
    "anywidget==0.9.18",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "arro3-core==0.5.1",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "coreforecast==0.0.16",
    "cycler==0.12.1",
    "dacite==1.9.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.0",
    "fonttools==4.58.5",
    "fs==2.4.16",
    "fsspec==2025.5.1",
    "fugue==0.9.1",
    "htmlmin==0.1.12",
    "idna==3.10",
    "imagehash==4.3.1",
    "ipykernel==6.29.5",
    "ipython==8.37.0",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.8",
    "llvmlite==0.44.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mercantile==1.2.1",
    "multimethod==1.12",
    "narwhals==1.45.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numba==0.61.0",
    "numpy==2.1.3",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.0",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "phik==0.12.4",
    "pillow==11.3.0",
    "pip==25.1.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "psygnal==0.14.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "puremagic==1.30",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywavelets==1.8.0",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "rpds-py==0.26.0",
    "ruff==0.12.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "statsforecast==2.0.2",
    "statsmodels==0.14.4",
    "threadpoolctl==3.6.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triad==0.9.8",
    "typeguard==4.4.4",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "utilsforecast==0.2.12",
    "vega-datasets==0.9.0",
    "vegafusion==2.0.2",
    "visions==0.8.1",
    "vl-convert-python==1.8.0",
    "wcwidth==0.2.13",
    "widgetsnbextension==4.0.14",
    "wordcloud==1.9.4",
    "xyzservices==2025.4.0",
    "ydata-profiling==4.16.1",
]
